# ros2_obstacle_avoider

src/moving_target/: CMakeLists.txt  package.xml
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: listener.cpp  talker.cpp
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: gazebo.launch.py
src/my_robot_description/src/: dummy_node.cpp
src/my_robot_description/urdf/: my_robot.urdf  robot.urdf.xacro
src/obstacle_avoider/: CMakeLists.txt  package.xml
src/obstacle_avoider/include/obstacle_avoider/: obstacle_avoider.hpp
src/obstacle_avoider/src/: obstacle_avoider.cpp
